fixed overflow-y

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 :root {
